--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "angel",
   "description": "",
   "version": "0.1.0",
-  "dependencies": {},
+  "dependencies": {
+    "moment": "^2.29.1"
+  },
   "devDependencies": {
     "serverless-dynamodb-local": "^0.2.39",
     "serverless-offline": "^6.0.0-alpha.67"
